# thesis-project

GeneCopyNumber/H/: Common.h  FastaGenerator.h  GCCorrection.h  Logger.h  polyfit.hpp
GeneCopyNumber/Src/: Common.cpp  FastaGenerator.cpp  GCCorrection.cpp  Logger.cpp  main.cpp
GeneCopyNumber/test.xcodeproj/: project.pbxproj
GeneCopyNumber/test.xcodeproj/project.xcworkspace/xcuserdata/emre.xcuserdatad/: UserInterfaceState.xcuserstate
GeneCopyNumber/test.xcodeproj/xcuserdata/emre.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ParalogGenes/: CMakeLists.txt
ParalogGenes/Cpp/: DnaSeq.cpp  Gene.cpp  SegmentalDuplication.cpp  Utility.cpp  main.cpp
ParalogGenes/H/: DnaSeq.h  Gene.h  SegmentalDuplication.h  TypeDefs.h  Utility.h
